app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --brand: #9D3E3C;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-brand: var(--brand);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #000000;
    --foreground: #ededed;
  }
}

/* Themes */
body.theme-dark {
  --background: #000000;
  --foreground: #ededed;
  --brand: #9D3E3C;
}

body.theme-light {
  --background: #ffffff;
  --foreground: #171717;
  --brand: #9B3234;
  /* Bordeaux */
  background-color: var(--background);
  color: var(--foreground);
}

body.theme-christmas {
  --background: #022c22;
  /* Dark Green */
  --foreground: #f0fdf4;
  --brand: #dc2626;
  /* Red */
}

body.theme-anniversary {
  --background: #0f172a;
  /* Slate 900 */
  --foreground: #f8fafc;
  --brand: #d4af37;
  /* Gold */
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

/* Custom Scrollbar for premium feel */
.custom-scrollbar::-webkit-scrollbar {
  width: 6px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: transparent;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(255, 255, 255, 0.2);
  border-radius: 20px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background-color: var(--brand);
}

